# project-code-combiner

./: .gitignore  .pcc_config.example.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  dependency_resolver.rs  main.rs  typescript_resolver.rs
