[package]
name = "pcc"
version = "0.2.7"
edition = "2021"
description = "A simple command line tool that combines source code files in a project directory into a single file or copy to clipboard."
license = "MIT"
readme = "README.md"

[dependencies]
clipboard = "0.5.0"
ignore = "0.4.22"
regex = "1.5.4"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
