[package]
name = "pcc"
version = "0.6.0"
edition = "2021"
description = "A simple command line tool that combines source code files in a project directory into a single file or copy to clipboard."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kosaki08/project-code-combiner"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clipboard = "0.5.0"
ignore = "0.4.22"
regex = "1.5.4"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-php = "0.20"
tree-sitter-python = "0.20"
oxc_resolver = "0.4.0"
oxc_span = "0.4.0"
oxc_ast = "0.4.0"
serde_json = "1.0"
