[package]
name = "pcc"
version = "0.6.4"
edition = "2021"
description = "A command-line tool that combines project source code files into structured XML output, with support for file targeting, dependency resolution, and clipboard integration."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kosaki08/project-code-combiner"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clipboard = "0.5.0"
ignore = "0.4.22"
regex = "1.5.4"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-php = "0.20"
tree-sitter-python = "0.20"
oxc_resolver = "0.4.0"
oxc_span = "0.4.0"
oxc_ast = "0.4.0"
serde_json = "1.0"
